create github pages

--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
                 <div class="card-wrapper">
                     <div class="card-box align-left">
                         <h4 class="card-title mbr-fonts-style mb-4 display-2">
-                            <strong>Ecco WoP!</strong></h4>
+                            <strong>Cos'è WoP?</strong></h4>
                         <p class="mbr-text mbr-fonts-style mb-4 display-7">
                             WoP è una free-access platform creata da giovani fotografi, tramite la quale nuovi clienti potranno mettersi in contatto con te ogni giorno, sulla base delle tue disponibilità e competenze. Potrai essere retribuito per quello che vali!</p>
-                        <div class="mbr-section-btn"><a class="btn btn-secondary display-4" href="index.html#form1-8">Resta in contatto!</a></div>
+                        
                     </div>
                 </div>
             </div>
@@ -186,7 +186,7 @@
     <div class="align-center container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ZUimIrzqFAhSsrCyEzXcVBnIzalzoi1UI2Wk9H10JV/+6i1a/aMwlqYLtIJcPeAnlIYhxB2mhIA2+UvCwQJOxy9W3BVs7RVVIAwRHtrcvn1WbP/FSpvkUUmXbbYECYc7">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="QCFFA/KOpn5nr1vyr+9nWutCQOuVaTBZPnnwdh5DSLOqVjDFflZ1UsW5EGPHWmBzOWuDfOyCFEBjTmKNHXxIC7CutloBihvoqPJi557WrEYoXAL77sa3OTOLZIIMntnv">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Grazie!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
@@ -194,7 +194,7 @@
                     </div>
                     <div class="dragArea row">
                         <div class="col-12">
-                            <h1 class="mbr-section-title mb-4 display-2"><strong>Sei interessato?</strong></h1>
+                            <h1 class="mbr-section-title mb-4 display-2"><strong>Ecco a te WoP!</strong></h1>
                         </div>
                         <div class="col-12">
                             <p class="mbr-text mbr-fonts-style mb-5 display-7">Lasciaci la tua email per rimanere aggiornato:</p>
@@ -209,7 +209,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/u" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/t" style="color:#aaa;">Built</a> with Mobirise templates</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/t" style="color:#aaa;">Created</a> with Mobirise css web theme</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
   <input name="animation" type="hidden">
